--- a/views/notes.erb
+++ b/views/notes.erb
@@ -1,6 +1,22 @@
 <!DOCTYPE html>
 <html>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>GoodNote App</title>
+  <link rel="stylesheet" href="/docs/css/nav.css">
+
+</head>
 <body>
+
+  <nav>
+    <ul class="nav-bar">
+      <li class="nav-button"><a href="home" class="nav-text">Home</a></li>
+      <li class="nav-button"><a href="activity" class="nav-text">Activity</a></li>
+      <li class="nav-button"><a href="notes" class="nav-text">Notes</a></li>
+    </ul>
+  </nav>
 
 <form method='POST' id="client_form">
     <select name="client" id="client_list" onchange="this.form.submit()">
