--- a/views/home.erb
+++ b/views/home.erb
@@ -9,8 +9,7 @@
 </head>
 
 <body>
-    <h1>GoodNote</h1>
-    
+
   <nav>
     <ul class="nav-bar">
       <li class="nav-button"><a href="home" class="nav-text">Home</a></li>
@@ -20,6 +19,11 @@
   </nav>
 
   <div class="main">
+
+  <div id="home">
+    <h1 class="name">GoodNote</h1>
+    <h3 class="title">Music Therapist App</h3>
+  </div>
   
   </div>
 
