--- a/views/notes.erb
+++ b/views/notes.erb
@@ -14,7 +14,7 @@
 </form>
 
 <form method='POST' id="notes_form">
-    <textarea id="notes" name="notes" form="notes_form"></textarea>
+    <textarea id="notes" name="notes" form="notes_form"><%= @note_content %></textarea>
     <input type="submit" value="Save Notes">
 </form>
 
