--- a/views/activity.erb
+++ b/views/activity.erb
@@ -19,5 +19,22 @@
   </nav>
 
   <div class="main">
-  
+
+    <table>
+      <tr>
+        <th>Time</th>
+        <th>Patient</th>
+        <th>Request</th>
+        <th>Response</th>
+      </tr>
+
+      <% @activities.each do |a| %>
+        <tr>
+          <td><%= a.time %></td>
+          <td><%= a.patient_id %></td>
+          <td><%= a.request %></td>
+          <td><%= a.response %></td>
+        </tr>
+      <% end %>
+    </table>
   </div>
