add stylesheet and convert pages to use it

--- a/views/home.erb
+++ b/views/home.erb
@@ -4,30 +4,28 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>GoodNote App</title>
-  <link rel="stylesheet" href="/docs/css/nav.css">
+  <link rel="stylesheet" href="/docs/css/test.css">
 
 </head>
 
-<body>
+<body class="landing">
 
-  <nav>
-    <ul class="nav-bar">
-      <li class="nav-button"><a href="home" class="nav-text">Home</a></li>
-      <li class="nav-button"><a href="activity" class="nav-text">Activity</a></li>
-      <li class="nav-button"><a href="notes" class="nav-text">Notes</a></li>
-    </ul>
-  </nav>
+	<header id="header" class="alt">
+	  <h1><strong><a href="home">GOODNOTE</a></strong></h1>
+		<nav id="nav">
+			<ul>
+				<li><a href="home">Home</a></li>
+				<li><a href="activity">Activity</a></li>
+				<li><a href="notes">Notes</a></li>
+        <li><a href="login">Login</a></li>
+			</ul>
+		</nav>
+	</header>
 
-  <div class="main">
-
-  <div id="home">
-    <h1 class="name">GoodNote</h1>
-    <h3 class="title">Music Therapist App</h3>
-  </div>
-  
-  </div>
-
-  
+	<section id="banner">
+		<h2>GOODNOTE</h2>
+		<p>A music therapy application with Spotify integration.<br /> for music analysis and unique recommendations</p>
+		</section>
 
 </body>    
 </html>    
