--- a/views/login.erb
+++ b/views/login.erb
@@ -22,6 +22,12 @@
 		</nav>
 	</header>
 
-  <div class="main">
-  
+  <div class="login-page">
+    <form class="login-form">
+      <input placeholder="Username">
+      <input placeholder="Password">
+      <button>Login</button>
+    </form>
   </div>
+
+  </body>
