--- a/views/notes.erb
+++ b/views/notes.erb
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>GoodNote App</title>
-  <link rel="stylesheet" href="/docs/css/nav.css">
+  <link rel="stylesheet" href="/docs/css/test.css">
 
     <script src="http://js.nicedit.com/nicEdit-latest.js" type="text/javascript"></script>
     <script type="text/javascript">bkLib.onDomLoaded(nicEditors.allTextAreas);</script>
@@ -13,13 +13,17 @@
 </head>
 <body>
 
-  <nav>
-    <ul class="nav-bar">
-      <li class="nav-button"><a href="home" class="nav-text">Home</a></li>
-      <li class="nav-button"><a href="activity" class="nav-text">Activity</a></li>
-      <li class="nav-button"><a href="notes" class="nav-text">Notes</a></li>
-    </ul>
-  </nav>
+	<header id="header">
+	  <h1><strong><a href="home">GOODNOTE</a></strong></h1>
+		<nav id="nav">
+			<ul>
+				<li><a href="home">Home</a></li>
+				<li><a href="activity">Activity</a></li>
+				<li><a href="notes">Notes</a></li>
+        <li><a href="login">Login</a></li>
+			</ul>
+		</nav>
+	</header>
 
 <form method='POST' id="client_form">
     <select name="client" id="client_list" onchange="this.form.submit()">
@@ -31,6 +35,10 @@
 
     <input type="date" id="date" name="date" value="<%= @selected_date %>" onchange="this.form.submit()">
 </form>
+
+<div id="mood-tracking">
+
+</div>
 
 <form method='POST' id="notes_form">
     <textarea id="notes" name="notes" form="notes_form" style="width: 90%; height: 100px;"><%= @note_content %></textarea>
