--- a/views/notes.erb
+++ b/views/notes.erb
@@ -20,30 +20,38 @@
 				<li><a href="home">Home</a></li>
 				<li><a href="activity">Activity</a></li>
 				<li><a href="notes">Notes</a></li>
-        <li><a href="login">Login</a></li>
+                <li><a href="login">Login</a></li>
 			</ul>
 		</nav>
 	</header>
 
 <form method='POST' id="client_form">
-    <select name="client" id="client_list" onchange="this.form.submit()">
-        <% @clients.each do |client| %>
-            <% id = client[:spotify_id] %>
-            <option value=<%=id%> <%='selected' if @current_client == id%> > <%=id%> </option>
-        <% end %>
-    </select>
-
-    <input type="date" id="date" name="date" value="<%= @selected_date %>" onchange="this.form.submit()">
+    <div class="row uniform 50%">
+        <div class="6u 12u$(xsmall)">
+            <div class="select-wrapper">
+                <select name="client" id="client_list" onchange="this.form.submit()">
+                    <% @clients.each do |client| %>
+                        <% id = client[:spotify_id] %>
+                        <option value=<%=id%> <%='selected' if @current_client == id%> > <%=id%> </option>
+                    <% end %>
+                </select>
+                </div>
+        </div>
+        <div class="6u$ 12u$(xsmall)">
+            <input type="date" id="date" name="date" value="<%= @selected_date %>" onchange="this.form.submit()">
+        </div>
+    </div>
 </form>
 
 <div id="mood-tracking">
 
 </div>
 
-<form method='POST' id="notes_form">
-    <textarea id="notes" name="notes" form="notes_form" style="width: 90%; height: 100px;"><%= @note_content %></textarea>
+<form method='POST' class="notes_form">
+    <textarea id="notes" name="notes" form="notes_form" style="width: 100%; height: 360px;"><%= @note_content %></textarea>
     <input type="submit" value="Save Notes">
 </form>
+
 
 </body>
 
