--- a/views/home.erb
+++ b/views/home.erb
@@ -17,7 +17,7 @@
 				<li><a href="home">Home</a></li>
 				<li><a href="activity">Activity</a></li>
 				<li><a href="notes">Notes</a></li>
-        <li><a href="login">Login</a></li>
+        <li><a href="login">Connect</a></li>
 			</ul>
 		</nav>
 	</header>
