--- a/views/login.erb
+++ b/views/login.erb
@@ -5,7 +5,6 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>GoodNote App</title>
   <link rel="stylesheet" href="/docs/css/test.css">
-
 </head>
 
 <body>
@@ -17,17 +16,16 @@
 				<li><a href="home">Home</a></li>
 				<li><a href="activity">Activity</a></li>
 				<li><a href="notes">Notes</a></li>
-        <li><a href="login">Login</a></li>
+        <li><a href="login">Connect</a></li>
 			</ul>
 		</nav>
 	</header>
 
   <div class="login-page">
-    <form class="login-form">
-      <input placeholder="Username">
-      <input placeholder="Password">
-      <button>Login</button>
-    </form>
-  </div>
+  <div class="form">
+		<p>Connect to your Spotify account to access patient activity and take notes</p>
+    <button type="submit" class='special'>Connect to Spotify</button>
+    </div>
+  </div> 
 
-  </body>
+</body>
